# flaresim_nuke

./: .gitignore  CMakeLists.txt  LENS_EDITOR_PLAN.md  README.md  build_all.ps1  build_all.sh  build_editor.ps1  compile_flags.txt  imgui.ini
lens_editor/: CMakeLists.txt  README.md
lens_editor/src/: app.cpp  app.h  main.cpp
lenses/: all_lenses.sh
nuke/: menu.py
src/: FlareSim.cpp
